--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "react-toastify": "^8.1.0",
     "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
